# libqgit2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  FindLibgit2.cmake  LICENSE  README.md  http-parser.pri  libgit2.pri  libqgit2.pro  libqgit2_export.h  qgit2.h  zlib.pri
include/: libqgit2_export.h
include/QGit/: QGitDataBase  QGitDataBaseBackend  QGitIndex  qgitblob.h  qgitcommit.h  qgitconfig.h  qgitdatabase.h  qgitdatabasebackend.h  qgiterror.h  qgitexception.h  qgitindex.h  qgitindexentry.h  qgitobject.h  qgitoid.h  qgitref.h  qgitrepository.h  qgitrevwalk.h  qgitsignature.h  qgitsubmodule.h  qgittag.h  qgittree.h  qgittreeentry.h
include/QGit2/: QGit2  QGitBlob  QGitCommit  QGitConfig  QGitError  QGitException  QGitIndexEntry  QGitOId  QGitObject  QGitRef  QGitRepository  QGitRevWalk  QGitSignature  QGitSubmodule  QGitTag  QGitTree  QGitTreeEntry  qgitblob.h  qgitcommit.h  qgitconfig.h  qgitdatabase.h  qgitdatabasebackend.h  qgiterror.h  qgitindex.h  qgitindexentry.h  qgitobject.h  qgitoid.h  qgitref.h  qgitrepository.h  qgitrevwalk.h  qgitsignature.h  qgitsubmodule.h  qgittag.h  qgittree.h  qgittreeentry.h
src/: CMakeLists.txt  Mainpage.dox  blob.cpp  blob.h  buffer.h  commit.cpp  commit.h  credentials_p.h  database.cpp  database.h  databasebackend.cpp  databasebackend.h  index.cpp  index.h  libqgit2_config.h  libqgit2_export.h  object.cpp  object.h  oid.cpp  oid.h  qgitblob.cpp  qgitblob.h  qgitcheckoutoptions.cpp  qgitcheckoutoptions.h  qgitcherrypickoptions.cpp  qgitcherrypickoptions.h  qgitcommit.cpp  qgitcommit.h  qgitconfig.cpp  qgitconfig.h  qgitcredentials.cpp  qgitcredentials.h  qgitdatabase.cpp  qgitdatabase.h  qgitdatabasebackend.cpp  qgitdatabasebackend.h  qgitdiff.cpp  qgitdiff.h  qgitdiffdelta.cpp  qgitdiffdelta.h  (+72 more)
src/private/: annotatedcommit.cpp  annotatedcommit.h  buffer.cpp  buffer.h  pathcodec.cpp  pathcodec.h  remotecallbacks.cpp  remotecallbacks.h  strarray.cpp  strarray.h
tests/: CMakeLists.txt  Checkout.cpp  Clone.cpp  Diff.cpp  Fetch.cpp  Init.cpp  Push.cpp  QRev.cpp  QRev.h  QStatus.cpp  QStatus.h  README.md  Rebase.cpp  Repository.cpp  Revision.cpp  StatusOptions.cpp  TestHelpers.cpp  TestHelpers.h  libqgit2_id_rsa  libqgit2_id_rsa.pub
